[BSK-1481] make sure the version number is more easily visible, and don't limit the max width of the text block
Former-commit-id: e3f93ed16bad8781bee6c58983b09855d3b8a5ff
Former-commit-id: 119f674863d7361988582eadd415a0bb716c0351

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -13,3 +13,10 @@ a.el, a.el:visited {
 	color: #565A5C;
 }
 
+.wy-side-nav-search>div.version {
+	color: #565A5C; # CU dark gray
+}
+
+.wy-nav-content {
+    max-width: none;
+}
